--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,71 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background:hsl(13, 88%, 68%);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.b-image{
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+}
+
+.birthday{
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  margin-bottom: 25px;
+}
+
+.b-detail{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.b-detail h3{
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.b-detail h4{
+  font-size: 14px;
+  font-weight: 300;
+}
+
+.b-list {
+  width: 400px;
+  background:#fff;
+  padding: 30px;
+  margin: auto;
+  border-radius: 8px;
+  box-shadow: 3px 2px hsl(0, 0%, 92%);
+  margin-bottom: 50px;
+  margin-top: 50px;
+}
+
+button{
+  width: 100%;
+  height: 60px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #fff;
+  background: hsl(13, 72%, 25%);
+  border-radius: 20px;
+  border: none;
+  margin-top: 20px;
+}
+
+
+.b-head{
+  margin-bottom: 40px;
+  font-size: 30px;
+}
+
+
